--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack serve"
+    "lint": "eslint .",
+    "test": "jest",
+    "build": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,9 @@
     "firebase": "^11.3.1"
   },
   "devDependencies": {
+    "eslint": "^9.20.1",
+    "gh-pages": "^6.3.0",
+    "jest": "^29.7.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
