--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest",
-    "build": "npm run build",
+    "build": "webpack --mode production",  
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
@@ -27,3 +27,4 @@
     "webpack-dev-server": "^5.2.0"
   }
 }
+
