--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest",
-    "build": "webpack --mode production",  
+    "build": "webpack --mode production",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/vision": "^4.3.2",
+    "ajv": "^8.6.0",  
+    "ajv-keywords": "^3.5.2",  
     "dotenv": "^16.4.7",
     "face-api.js": "^0.22.2",
     "firebase": "^11.3.1"
@@ -24,7 +26,9 @@
     "jest": "^29.7.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^5.2.0",
+    "terser-webpack-plugin": "^5.3.0"  
   }
 }
+
 
