--- a/package.json
+++ b/package.json
@@ -7,28 +7,30 @@
     "lint": "eslint .",
     "test": "jest",
     "build": "webpack --mode production",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "start": "webpack serve --mode development --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/vision": "^4.3.2",
-    "ajv": "^8.6.0",  
-    "ajv-keywords": "^3.5.2",  
+    "ajv": "^8.6.0",
+    "ajv-keywords": "^3.5.2",
     "dotenv": "^16.4.7",
     "face-api.js": "^0.22.2",
     "firebase": "^11.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^8.4.1",
     "eslint": "^9.20.1",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
+    "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "terser-webpack-plugin": "^5.3.0"  
+    "webpack-dev-server": "^5.2.0"
   }
 }
-
-
