--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-loader": "^8.4.1",
     "eslint": "^9.20.1",
     "gh-pages": "^6.3.0",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.98.0",
