--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '14'  # Consider upgrading to v16 or v18 if needed
+          node-version: '14'  
 
       - name: Clear npm cache and install dependencies
         run: |
@@ -36,9 +36,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # Ensure consistency with lint job
+        uses: actions/setup-node@v3  
         with:
-          node-version: '14'  # Upgrade to v16 or v18 if needed
+          node-version: '14'  
 
       - name: Clear npm cache and install dependencies
         run: |
@@ -75,7 +75,7 @@ jobs:
           folder: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        continue-on-error: true  # This will allow the pipeline to continue even if deploy fails
+        continue-on-error: true  
 
 
 
